[package]
name = "game-five-balls"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
gtk4 = { version = "0.8.2" } # Keep gtk4, remove its macros feature for now
glib = { version = "0.19.5", features = ["macros", "subclassing"] } # Re-add glib with its own macros and subclassing features

